# ndpi-rs

./: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.github/workflows/: rust.yml
.zed/: debug.json
examples/ndpiReader/: args.rs  dpi.rs  main.rs  stats.rs
src/: detection.rs  error.rs  ffi.rs  flow.rs  lib.rs  main.rs  ndpi_main.rs  risk.rs  types.rs  version.rs
tests/: ndpi_detection.rs
