[package]
name = "ndpi-rs"
version = "0.1.0"
rust-version = "1.92"
edition = "2024"
authors = ["msnex"]
keywords = ["dpi", "ndpi", "packet", "traffic"]
readme = "README.md"
repository = "https://github.com/msnex/ndpi-rs"
license = "LGPL-3.0"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "ndpiReader"

[dependencies]
libc = "0.2"

[dev-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
pcap = "2.4.0"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3"
