[package]
name = "ndpi-rs"
version = "0.1.0"
rust-version = "1.92"
edition = "2024"
authors = ["msnex"]
keywords = ["ffi", "dpi", "ndpi", "packet", "traffic"]
readme = "README.md"
repository = "https://github.com/msnex/ndpi-rs"
license = "LGPL-3.0"
build = "build.rs"

[[example]]
name = "ndpiReader"

[dependencies]
libc = "0.2"

[dev-dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ctrlc = "3.5"
etherparse = "0.19.0"
pcap = "2.4.0"
rapidhash = "4.4.1"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3"
